--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <br>
 
 
-	<div  class="container-fluid">
+	<div   class="container-fluid">
 		<div  class="row">
 			<center>
 			<div  class="col-lg-4 offset-lg-1">
@@ -126,6 +126,15 @@
 	     	</center>
 	    </div>
 	</div> 		
+	<footer  class="bg-dark footer py-5 ">
+      <div class=" container">	
+        	<p class="m-0 text-center text-white">Copyright &copy; GMCx </p>
+        <center>
+        	<a class="icons btn bg-white btn-social-icon btn-white btn-facebook">
+        	<span class="fa fa-facebook"></span>
+        	</a>	
+        </center>		
+      </div>
 
 
 </body>
