--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 		<div  class="row">
 			<center>
 			<div  class="col-lg-4 offset-lg-1">
-	    		<div style=" margin-bottom :40px;" class="card">
+	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  max-width: 300px; margin: auto;" class="card">
 	    			<center>
-	      				<img  src="img/yahya.jpg" class ="hamza" style="width:100%">
+	      				<img  src="img/yahya.jpg" class ="hamza" style="width: 400px;height:400px;margin-bottom:auto;">
 	      				<h1 st> Yahya Bouhlel </h1>
 	      				<p class="title">GoMyCode Director</p>
 	       			<div style="margin:24px;">  
@@ -111,9 +111,9 @@
 	      		</div>
 	      	</div>	
 			<div  class="col-lg-4 offset-lg-2">
-	    		<div style=" margin-bottom :40px; " class="card">
+	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);max-width: 300px;  margin: auto;  text-align: center;font-family: arial;  margin-left: 2cm;" class="card">
 	    			<center>
-	      				<img  src="img/yahya.jpg" class ="hamza" style="width:100%">
+	      				<img  src="img/yahya.jpg" class ="hamza" style="width: 400px;height:400px;margin-bottom:auto;">
 	      				<h1 st> XY </h1>
 	      				<p class="title">AI</p>
 	       			<div style="margin:24px;">  
