--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div  class="col-lg-4 offset-lg-1">
 	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  max-width: 300px; margin: auto;" class="card">
 	    			<center>
-	      				<img  src="img/yahya.jpg"  style="width: 400px;height:400px;margin-bottom:auto;">
+	      				<img  src="img/yahya.jpg"  style="width:100%; width: 400px;height:400px;margin-bottom:auto;">
 	      				<h1 st> Yahya Bouhlel </h1>
 	      				<p class="title">GoMyCode Director</p>
 	       			<div style="margin:24px;">  
@@ -113,7 +113,7 @@
 			<div  class="col-lg-4 offset-lg-2">
 	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);max-width: 300px;  margin: auto;  text-align: center;font-family: arial;  margin-left: 2cm;" class="card">
 	    			<center>
-	      				<img  src="img/yahya.jpg"  style="width: 400px;height:400px;margin-bottom:auto;">
+	      				<img  src="img/yahya.jpg"  style="width:100%; width: 400px;height:400px;margin-bottom:auto;">
 	      				<h1 st> XY </h1>
 	      				<p class="title">AI</p>
 	       			<div style="margin:24px;">  
