--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<div  class="row">
 			<center>
 			<div  class="col-lg-4 offset-lg-1">
-	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  max-width: 300px; margin: auto;" class="card">
+	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  width: 300px; margin: auto;" class="card">
 	    			<center>
 	      				<img  src="img/yahya.jpg"  style="width:100%; width: 298px;height:400px;margin-bottom:auto;">
 	      				<h1 st> Yahya Bouhlel </h1>
@@ -111,7 +111,8 @@
 	      		</div>
 	      	</div>	
 			<div  class="col-lg-4 offset-lg-2">
-	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);max-width: 300px;  margin: auto;  text-align: center;font-family: arial;  margin-left: 2cm;" class="card">
+	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+				    width: 300px;  margin: auto;  text-align: center;font-family: arial;  margin-left: 2cm;" class="card">
 	    			<center>
 	      				<img  src="img/yahya.jpg"  style="width:100%; width: 298px;height:400px;margin-bottom:auto;">
 	      				<h1 st> XY </h1>
