--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
 	<div   class="container-fluid">
-		<div  class="row">
+		<div style="padding-left:15%;" class="row">
 			<center>
 			<div  class="col-lg-4 offset-lg-1">
 	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); margin-left;20%;  width: 300px; margin: auto;" class="card">
