--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-5 offset-lg-3">
+				<div class="col-lg-5 offset-lg-3 col-sm-5 offset-sm-3 col-xs-5 offset-3">
 					<h1 style="color: white; padding-left: 35%; padding-top: 50px;">TECHNOPHILIA</h1>
 					<hr style="padding-left: 35%; margin-left: 140px;">
 					<h2 style="color:#8B0000; padding-left: 35%;margin-left: 53px;"><strong> WELCOME </strong></h2>
@@ -50,7 +50,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
+				<div class="col-lg-8 offset-lg-2 col-sm-8 offset-sm-2 col-xs-2 offset-2">
 					<center>
 						<p style="color: white; ">lehne aatini paragraphe tahfouna ka description. mahich bech tkoun ghadi raw juste kotlek bech tji tahtha fel west</p>
 					</center>
@@ -61,7 +61,7 @@
 
 		<div class="container" >
 			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
+				<div class="col-lg-8 offset-lg-2 col-sm-8 offset-sm-2 col-xs-2 offset-2">
 					<center>
 						<p style="color: white">In this event, we'll have a presentation , speakers and a game which means you can win an awesome gift.</p>
 						<p style="color: white">During this event you'll deal with:</p>
@@ -75,7 +75,7 @@
 	<div   class="container-fluid">
 		<div style="padding-left:15%;" class="row">
 			<center>
-			<div  class="col-lg-4 offset-lg-1">
+			<div  class="col-lg-4 offset-lg-1 col-sm-4 offset-sm-1 col-xs-4 offset-1">
 	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); margin-left;20%;  width: 300px; margin: auto;" class="card">
 	    			<center>
 	      				<img  src="img/yahya.jpg"  style="width:100%; width: 298px;height:400px;margin-bottom:auto;">
@@ -88,7 +88,7 @@
 	       			</center>
 	      		</div>
 	      	</div>	
-			<div  class="col-lg-4 offset-lg-2">
+			<div  class="col-lg-4 offset-lg-2 col-sm-4 offset-sm-2 col-xs-4 offset-2">
 	    		<div style=" margin-bottom :40px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);margin-left;20%;width: 300px;  margin: auto;  text-align: center;font-family: arial;  margin-left: 2cm;" class="card">
 	    			<center>
 	      				<img  src="img/yahya.jpg"  style="width:100%; width: 298px;height:400px;margin-bottom:auto;">
