--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
 	    		
 	     	</div>
-			<div  class="col-lg-4 offset-lg-2 col-sm-4 offset-sm-2 col-xs-4 offset-2">
+			<div  class="col-lg-4 offset-lg-2 col-sm-4 offset-sm-2 col-md-4 offset-md-2 col-xs-4 offset-xs-2">
 	    		<div class="card" style="width: 18rem;">
                    <img class="card-img-top" src="img/yahya.jpg" alt="Card image cap">
                      <div class="card-body">
