--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                        <center>
                        <h5 class="card-title"><strong>Yahya Bouhlel</strong></h5>
                        <p class="card-text">GoMyCode Director.</p>
-                       <a href="#" class="icons btn bg-dark btn-social-icon btn-dark btn-facebook">
+                       <a href="https://www.facebook.com/yahyacode" class="icons btn bg-dark btn-social-icon btn-dark btn-facebook">
                        <span class="fa fa-facebook"></span>
                        </a>
                        </center>	
