--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
   <title>Technophilia</title>
 </head>
-<body background="E:\Walid\GMC event\img\b.jpg" style="font-family:verdana" >	
+<body background="b.jpg" style="font-family:verdana" >	
 		
 				<div class="container">
 						<div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
